Style quotes and message

--- a/typing_game/index.html
+++ b/typing_game/index.html
@@ -5,10 +5,10 @@
     </head>
     <body>
         <h1>Figure out yer typing ye scallywag</h1>
-        <p>Learn from one of the best to ever do it. See how fast you can type out these Sherlock Holmes quotes. Hit **start** to begin</p>
-        <p id="quote"></p>
-        <p id="message"></p>
-        <div>
+        <p>Learn from one of the best to ever do it. See how fast you can type out these Sherlock Holmes quotes. <br> Hit <span id="start-intro">start</span> to begin</p>
+        <p id="quote" style="background-color: black; color: white"></p>
+        <p id="message" style="color: green;"></p>
+        <div class="typing-arena">
             <input type="text" aria-label="current word" id="typed-value" />
             <button type="button" id="start">Start</button>
         </div>
