--- a/bank-app/index.html
+++ b/bank-app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank App</title>
+    <script src="app.js" defer></script>
   </head>
   <body>
     <!-- This is where you'll work -->
