--- a/bank-app/index.html
+++ b/bank-app/index.html
@@ -19,6 +19,7 @@
       <header>
         <h1>Bank App</h1>
         <a href="/login" onclick="onLinkClick(event)">Logout</a>
+        <a href="/credits" onclick="onLinkClick(event)">credits</a>
       </header>
       <section>
         Balance: 100$
@@ -35,6 +36,14 @@
           </thead>
           <tbody></tbody>
         </table>
+      </section>
+    </template> 
+    <template id="credits">
+      <h1>Credits</h1>
+      <section>
+        <p>Cheers to Microsoft for this!</p>
+        <a href="/dashboard" onclick="onLinkClick(event)">Home</a>
+        <a href="/login" onclick="onLinkClick(event)">Logout</a>
       </section>
     </template>  
   </body>
