--- a/bank-app/index.html
+++ b/bank-app/index.html
@@ -12,7 +12,12 @@
     <template id="login">
       <h1>Bank App</h1>
       <section>
-        <a href="/dashboard" onclick="onLinkClick(event)">Login</a>
+        <h2>Login</h2>
+        <form id="loginForm">
+          <label for="user">Username</label>
+          <input type="text" id="user" name="user">
+          <button>Login</button>
+        </form>
       </section>
     </template>  
     <template id="dashboard">
