--- a/bank-app/index.html
+++ b/bank-app/index.html
@@ -16,6 +16,8 @@
         <form id="loginForm">
           <label for="user">Username</label>
           <input type="text" id="user" name="user">
+          <label for="currency">Currency</label>
+          <input type="text" id="currency" name="currency" value="$">
           <button>Login</button>
         </form>
       </section>
