--- a/bank-app/index.html
+++ b/bank-app/index.html
@@ -18,6 +18,10 @@
           <input type="text" id="user" name="user">
           <label for="currency">Currency</label>
           <input type="text" id="currency" name="currency" value="$">
+          <label for="description">Description</label>
+          <input type="text" id="description" name="description">
+          <label for="balance">Balance</label>
+          <input type="number" id="balance" name="balance" value="0">
           <button>Login</button>
         </form>
       </section>
