Separate login from register

--- a/bank-app/index.html
+++ b/bank-app/index.html
@@ -14,6 +14,12 @@
       <section>
         <h2>Login</h2>
         <form id="loginForm">
+          <label for="username">Username</label>
+          <input type="text" id="username" name="user">
+          <button>Login</button>
+        </form>
+        <hr/>
+        <form id="RegisterForm">
           <label for="user">Username</label>
           <input type="text" id="user" name="user">
           <label for="currency">Currency</label>
