--- a/bank-app/index.html
+++ b/bank-app/index.html
@@ -19,6 +19,7 @@
           <button>Login</button>
         </form>
         <hr/>
+        <h2>Register</h2>
         <form id="RegisterForm">
           <label for="user">Username</label>
           <input type="text" id="user" name="user">
