--- a/bank-app/index.html
+++ b/bank-app/index.html
@@ -29,7 +29,7 @@
           <input type="text" id="description" name="description">
           <label for="balance">Balance</label>
           <input type="number" id="balance" name="balance" value="0">
-          <button>Login</button>
+          <button>Register</button>
         </form>
       </section>
     </template>  
