--- a/bank-app/index.html
+++ b/bank-app/index.html
@@ -20,7 +20,7 @@
         </form>
         <hr/>
         <h2>Register</h2>
-        <form id="RegisterForm" method="post" action="//localhost:5000/api/accounts">
+        <form id="registerForm" action="javascript:register()">
           <label for="user">Username</label>
           <input type="text" id="user" name="user">
           <label for="currency">Currency</label>
